# backcast

./: .env.example  .gitignore  CONTEXT.md  README.md  electron-builder.yml  index.html  mkdocs.yml  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.mts  vite.config.ts
.claude/: CLAUDE.md
python/: pyproject.toml
python/engine/: _backend_impl.py  backend_service.py  core.py  inproc_server.py  jquants_listed_info.py  jquants_loader.py  jquants_to_catalog.py  mode_manager.py  models.py  nautilus_adapter.py  nautilus_backtest_runner.py  nautilus_catalog_loader.py  paths.py  portfolio.py  reducer.py  replay.py  replay_loader.py  replay_window.py  signals.py  summary.py
python/engine/exchanges/: _env_guard.py  _login_dialog.py  _parse_utils.py  kabusapi.py  kabusapi_auth.py  kabusapi_execution.py  kabusapi_login_flow.py  kabusapi_login_form_state.py  kabusapi_orders.py  kabusapi_ratelimit.py  kabusapi_register.py  kabusapi_url.py  kabusapi_ws.py  kabusapi_ws_codec.py  order_registry.py  tachibana.py  tachibana_auth.py  tachibana_codec.py  tachibana_credentials.py  tachibana_file_store.py  tachibana_login_flow.py  tachibana_login_form_state.py  tachibana_login_messages.py  tachibana_master.py  tachibana_orders.py  tachibana_pubkey.py  tachibana_url.py  tachibana_ws.py  tachibana_ws_codec.py  venue_login_headless.py
python/engine/kernel/: __init__.py  bars.py  broker.py  duckdb_bars.py  instrument_id.py  orders.py  portfolio.py  risk.py  runner.py  sink.py  stepper.py  strategy.py
python/engine/kernel/live/: __init__.py  broker.py  cell_bridge.py  controller.py  driver.py
python/engine/live/: _build_mode.py  account_sync.py  adapter.py  aggregator.py  backend_event_bus.py  backend_events.py  bar_supply.py  depth_cache.py  engine_controller.py  event_bus.py  event_wire.py  gui_bridge_actor.py  health_watchdog.py  instrument_mapping.py  instruments_scheduler.py  instruments_store.py  last_price_cache.py  live_adapter_factory.py  live_orchestrator.py  live_runner.py  logging.py  login_dialog_runner.py  mock_adapter.py  nautilus_data_client.py  nautilus_exec_client.py  nautilus_risk_config.py  order_facade.py  order_types.py  post_trade_gate.py  pre_trade_gate.py  reducer_bridge.py  run_registry.py  safety_rails.py  secret_provider.py  secret_vault.py  state_machine.py  strategy_host.py  strategy_log.py  strategy_registry.py  strategy_state_machine.py  (+2 more)
python/engine/strategy_replay/: __main__.py  cli.py
python/engine/strategy_runtime/: backtester.py  catalog_data_loader.py  cell_api.py  cell_synthesis.py  engine_runner.py  instrument_factory.py  live_cell_runtime.py  marimo_strategy.py  notebook_session.py  portfolio.py  position_sizing.py  replay_kernel_observer.py  replay_runner.py  run_buffer.py  run_buffer_reader.py  scenario.py  scorer_bindings.py  strategy_kind.py  strategy_loader.py  summary.py  thin_drain.py  universe.py  universe_bridge.py  warmup.py
python/engine/synth/: __init__.py  builders.py  core.py  feed.py  stochastic.py
python/scripts/: tachibana_ws_probe.py
python/spike/: docs_samples_check.py  gen_kabu_4sym_chart_state.py  gil_handoff_spike.py  kabu_capture_mock.py  kabu_pipeline_probe.py  kabu_push_probe.py  kabu_replay_multi.py  kabu_replay_wart.py  marimo_cell_synthesis_exec_spike.py  marimo_cell_synthesis_spike.py  phase6_stale_spike.py  s0_backtest.py  s1_adapter_smoke.py  s2spike_live_loop.py  stage_fixtures.sh  tachibana_capture_mock.py  tachibana_replay_multi.py  viz_source.py
python/spike/captures/: tachibana_mock_20260626T021409Z.json
python/spike/fixtures/strategies/: kernel_buy_and_rest.py  kernel_buy_once_cell.py  kernel_on_start_buy.py  kernel_spike_buy_sell.py  kernel_spike_buy_sell_cell.json  kernel_spike_buy_sell_cell.py  scenario_inline_subset.py  spike_bar_consumer.py  spike_buy_sell.py  synth_rank_cell.json  synth_rank_cell.py  universe_churn_cell.json  universe_churn_cell.py
python/spike/kernel_golden/: __init__.py  capture_golden.py  golden.json  normalize.py  purity.py  run_kernel.py  run_oracle.py  scenario.py  subprocess_util.py  verify_golden.py
python/spike/kernel_live/: __init__.py  run_mock_live.py
python/spike/live_adapter/: mock_inject.py  run_tracer_smoke.py
python/spike/marimo_embed/: __init__.py  ac1_perf.py  ac1_thin_drain.py  ac2_reactivity.py  ac3_async.py  context_standup.py  context_uniform.py  mono_smoke.py  spike0_context_standup.py  synthetic.py  v19_shape.py
python/spike/venue_login_secret/: run_secret_smoke.py  secret_mock.py
python/strategies/v19/: v19_core.py  v19_morning.json  v19_morning.py  v19_morning_cell.json  v19_morning_cell.py  v19_scorer.py
python/tests/: capture_rich_output_sample.py  capture_scenario_inline_golden.py  conftest.py  test_backtester_phase3.py  test_backtester_phase4.py  test_backtester_phase5.py  test_bt_universe_bridge.py  test_bt_universe_midstream_join.py  test_cell_api.py  test_cell_auto_bridge_roundtrip.py  test_data_engine_transport.py  test_depth_cache.py  test_duckdb_ts_event_synthesis.py  test_gate_import_purity.py  test_get_portfolio_json.py  test_gui_bridge_positions.py  test_health_watchdog_live.py  test_inproc_prompt_login.py  test_inproc_transport_forwarders.py  test_instrument_mapping.py  test_kabu_cancel_ack.py  test_kabu_error_codes.py  test_kabu_live_universe_churn.py  test_kabu_login_auth_rejected.py  test_kabu_orders_poll.py  test_kabu_prod_login_live.py  test_kabu_push_codec.py  test_kabu_ratelimit.py  test_kabu_register_cap.py  test_kernel_bars.py  test_kernel_buying_power_seam.py  test_kernel_duckdb_bars.py  test_kernel_duckdb_universe.py  test_kernel_golden_cpython.py  test_kernel_live_ac4_projection.py  test_kernel_live_cancel_ack_async.py  test_kernel_live_post_trade_live.py  test_kernel_live_purity.py  test_kernel_live_shutdown.py  test_kernel_live_step1.py  (+86 more)
python/tests/fixtures/: duckdb_bars_8918_daily_golden.json  duckdb_bars_8918_minute_20240401_golden.json  kabu_live_mock_4sym.json  tachibana_live_mock_4sym.json
python/tests/golden/: scenario_inline_golden.json
(+794 files in other folders)
