[project]
name = "backcast-engine"
version = "0.0.0"
description = "Ported TTWR replay engine running under Unity Mono+pythonnet (S1 / issue #9)"
requires-python = ">=3.13,<3.14"
dependencies = [
    # #50 (ADR-0006): nautilus-trader was removed entirely — Replay reads J-Quants DuckDB
    # directly (engine.kernel.duckdb_bars) and the kernel runs nautilus-free.
    # pyarrow remains a direct dep for _backend_impl's parquet catalog scan (instrument
    # listing); independent of Nautilus.
    "pyarrow>=18",
    # Direct read of the J-Quants per-symbol DuckDB as the kernel's market-data source,
    # replacing the nautilus parquet catalog (ADR-0006 / #47). No intermediate catalog.
    "duckdb>=1.5",
    "orjson>=3.11.9",
    "pydantic>=2.13.4",
    "httpx>=0.27",
    "websockets>=16.0",
    "joblib>=1.5.3",
    # Pinned to the 1.8.x line: the v19 strategy model (#72) is saved by scikit-learn
    # 1.8.0 and fails to unpickle under 1.9.x (`ModuleNotFoundError: No module named
    # '_loss'`). The kernel/engine never import sklearn (strategy-only dep), so the
    # blast radius is the strategy layer (findings 0029 decision 3). Re-training would be
    # higher cost; pin instead.
    "scikit-learn>=1.8,<1.9",
    "numpy>=2.4.4",
    "pandas>=2.3.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-httpx>=0.36.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["engine"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
