[project]
name = "backcast-engine"
version = "0.0.0"
description = "Ported TTWR replay engine running under Unity Mono+pythonnet (S1 / issue #9)"
requires-python = ">=3.13,<3.14"
dependencies = [
    # #50 (ADR-0006): nautilus-trader was removed entirely — Replay reads J-Quants DuckDB
    # directly (engine.kernel.duckdb_bars) and the kernel runs nautilus-free.
    # pyarrow remains a direct dep for _backend_impl's parquet catalog scan (instrument
    # listing); independent of Nautilus.
    "pyarrow>=18",
    # Direct read of the J-Quants per-symbol DuckDB as the kernel's market-data source,
    # replacing the nautilus parquet catalog (ADR-0006 / #47). No intermediate catalog.
    "duckdb>=1.5",
    "orjson>=3.11.9",
    "pydantic>=2.13.4",
    "httpx>=0.27",
    "websockets>=16.0",
    # #85: 外部 venue WS (立花 wss://) の TLS trust を certifi で固定する。
    # httpx の transitive 依存に乗ると、httpx の major で certifi を外された / 差し替えられた
    # ときに silent regression (CERTIFICATE_VERIFY_FAILED で EC push が全滅) を起こすため
    # direct 宣言する。findings 0053 §issue#85 / CONTEXT.md "certifi" 参照。
    "certifi>=2024.0",
    "joblib>=1.5.3",
    # Pinned to the 1.8.x line: the v19 strategy model (#72) is saved by scikit-learn
    # 1.8.0 and fails to unpickle under 1.9.x (`ModuleNotFoundError: No module named
    # '_loss'`). The kernel/engine never import sklearn (strategy-only dep), so the
    # blast radius is the strategy layer (findings 0029 decision 3). Re-training would be
    # higher cost; pin instead.
    "scikit-learn>=1.8,<1.9",
    "numpy>=2.4.4",
    "pandas>=2.3.3",
    # #76 S3 (ADR-0012): marimo promoted from spike-only to a prod dependency — it is the
    # reactive strategy execution model going forward. Range-pinned (not ==) per ADR-0012
    # Decision 3; the safety net for the heavy private-API coupling (compute_cells_to_run /
    # _find_cells_for_state / with_cell_id / get_executor) is uv.lock pinning the resolved
    # version + the thin-drain gate catching drift. RUN tests/test_strategy_runtime_thin_drain.py
    # on every marimo upgrade. The runtime seam must still lazy-import marimo (ADR-0012
    # Decision 4) — enforced by tests/test_strategy_runtime_offline.py.
    "marimo>=0.20.4",
    # #95 Phase 6 (ADR-0016 D11 / findings 0075 P6-3): rich notebook output. matplotlib is the
    # named charting producer — a figure crosses to Unity as a self-contained image/png data: URL
    # (via marimo's mpl formatter mimebundle) the C# side decodes to a Texture2D. Strategy-layer
    # only: the kernel/engine never import it (the runtime seam stays marimo/mpl-free at module
    # load — tests/test_strategy_runtime_offline.py), so the blast radius is the cell author's
    # output. altair/vl-convert are intentionally NOT bundled (findings 0075 P6-3: Vega needs a
    # JS renderer Unity lacks; matplotlib covers the charting need).
    "matplotlib>=3.9",
    # #92 (ADR-0023): 立花 v4r9 公開鍵認証。ログイン応答の仮想 URL 5 本が RSA 公開鍵で
    # 暗号化されて返り、クライアントが秘密鍵で復号する (PKCS1_OAEP / SHA256)。pycryptodomex
    # は import 名 `Cryptodome` (legacy pycrypto の `Crypto` と衝突しない別 namespace)。
    # 立花公式サンプル e_api_login_pubkey.py が `from Cryptodome...` を採用。
    # findings 0087 / references/pubkey_auth.md。
    "pycryptodomex>=3.20",
    # #92 (ADR-0023): 認証情報 (認証ID+秘密鍵) を平文保存しないための Fernet 暗号化
    # (secure_config.enc + API_DECRYPT_KEY) を立花サンプル互換でサポートする。
    "cryptography>=42.0",
    # bellwether intraday time-of-day strategy (_bellwether/strategies/intraday_tod_01.py):
    # an online walk-forward LightGBM that learns the momentum↔mean-reversion regime switch
    # by time-of-day. Strategy-only dependency (kernel/engine never import it) — lazy-imported
    # at first train so neither Replay nor #74 Auto attach blocks on the cold import; the
    # strategy falls back to a deterministic time-of-day heuristic if the import fails.
    "lightgbm>=4.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-httpx>=0.36.2",
]
# #76 S3 (ADR-0012): marimo graduated from this group to [project.dependencies]. The group
# is kept (empty) so the throwaway spike probes' documented `uv run --group spike python -m
# spike.marimo_embed.*` invocations (and docs/spike/marimo-embed-result.md) keep resolving —
# marimo now comes from the prod deps, so the group needs no entries.
spike = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["engine"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--strict-markers"
markers = [
    # #76: thin-drain runtime gates. marimo is a prod dependency since S3 (ADR-0012), so
    # these run in the default test run; the importorskip is now a defensive no-op.
    "marimo: thin-drain runtime gates (exercise the marimo embed execution model)",
    # Gap 3: bridge a pytest to an E2E Action-ID so conftest emits the canonical
    # [E2E <id> PASS/FAIL/SKIP] tag that run-live-e2e.ps1 / run-all-tests.ps1 roll up.
    "scenario: maps this test to an E2E Action-ID (e.g. scenario('KABU-LIVE-03'))",
]
